# update_item_caching_benchmark

./: CMakeLists.txt
benchmark/: CMakeLists.txt  benchmark.cpp
benchmark/tests/: custom_est.cpp  hyperscan.cpp  jsmn.cpp  rapidjson.cpp  re2.cpp  simdjson.cpp  tests.h  yyjson.cpp
data/long/: request.txt
data/medium/: pattern.txt
data/medium_reduced_pattern/: pattern.txt  request.txt
data/short/: capture.txt  pattern.txt
data/short_no_wildcard/: pattern.txt  request.txt
data/sofia/: capture.txt  pattern.txt  request.txt
data/xlong/: capture.txt  request.txt
libs/: CMakeLists.txt  hyperscan.patch
results/: counters.csv  counters.ods
